Bug 179857 - kate highlighting settings lost on reload
Summary: kate highlighting settings lost on reload
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-06 23:42 UTC by Cyrill Helg
Modified: 2009-08-28 20:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrill Helg 2009-01-06 23:42:02 UTC
Version:           3.1.87 (using 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101)), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.28-zen2-IBM-T43-dirty

1. Open a document in kate with syntaxhighlighting or choose something from menu to highlight manually.
2. Do a reload, F5
3. Highlighting is gone, even when you close the document and reopen it...
Comment 1 Thomas Braun 2009-02-22 18:26:14 UTC
*** Bug 182299 has been marked as a duplicate of this bug. ***
Comment 2 Christian Ehrlicher 2009-08-28 20:37:25 UTC
SVN commit 1016737 by chehrlic:

preserve selected highlightingMode on document reload
backport to 4.3.2?

BUG: 179857

 M  +4 -2      katedocument.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1016737