preserve selected highlightingMode on document reload backport to 4.3.2?

BUG: 179857

svn path=/trunk/KDE/kdelibs/kate/; revision=1016737